Min-width for all tables added to prevent collapsing of string columns

--- a/css/style.css
+++ b/css/style.css
@@ -128,3 +128,7 @@ i.small {
 #fontSelectorContainer {
   margin-right:20px;
 }
+
+table {
+  min-width:1450px;
+}
